Major User visible changes in Buildbot.             -*- outline -*-
  (see ChangeLog for a detailed list of changes)

* Release 0.8.0beta1

** New Steps

*** Visual Studio / VC++ Compile Steps

** New Change/SourceStamp attributes 'project' and 'repository'

These attributes can be used to further refine matching by schedulers.
Repository completes the SourceStamp: the tuple of (repository, branch,
revision) completely specifies a source code tree.  Likewise, the project
attribute can be used to support building several distinct projects within one
buildmaster, replacing the use of category for this purpose.  Matching can be
done using regular expressions, so it's even possible to support nested
projects!

** Scheduler requires keyword arguments

If you are creating your Scheduler like this:

  Scheduler("mysched", "mybranch", 0, ["foo", "bar"])

then it's time to change that to specify each of the arguments with a keyword:

  Scheduler(name="mysched", branch="mybranch",
        treeStableTimer=0, builderNames=["foo", "bar"])

** New /json web status

This view has lots of useful information perfectly formed for serving as input
to JavaScript status displays.  See /json/help for details.

** Jinja

All web status is now generated using the Jinja templating engine, which gives
buildbot a much more attractive and maintainable appearance.  Buildbot's output
is also now XHTML-compliant!

** Authorization Framework

The web-based status displays now provide fine-grained control over who can
do what - force builds, stop builds, cancel builds, etc.  See the manual for
configuration details.

** Cleanup, Bug Fixes, and Test Fixes

Thanks to help from a number of devoted contributors, this version of Buildbot
has seen a lot of house-cleaning, and even passes all of its own unit tests!  

** Removals

*** Removed buildbot.status.html.Waterfall (deprecated in 0.7.6)

Note that this does not remove the waterfall -- just an old version of it which